--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -29,3 +29,8 @@ jobs:
         run: choco install autohotkey.install --params='/DefaultVer:U32' 7zip
       - name: Build ahkmon package
         run: .\compile_release.bat
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ahkmon.zip
+          prerelease: true
